FIX: code block background colour on horizontal overflow

--- a/_sass/_darkmode.scss
+++ b/_sass/_darkmode.scss
@@ -95,6 +95,10 @@ html[data-theme="dark"] {
 
   .highlight {
     background: #2a2a2a;
+
+    pre {
+      background: #2a2a2a;
+    }
   }
 
   hr {
